# ChangeLog for media-gfx/gruffy
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Mar 2012; James Rowe <jnrowe@gmail.com> -gruffy-0.2.2.ebuild,
  gruffy-0.3.ebuild:
  Keyworded x86.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> gruffy-0.3.ebuild:
  Keyworded amd64.

*gruffy-0.3 (02 Feb 2012)

  02 Feb 2012; James Rowe <jnrowe@gmail.com> +gruffy-0.3.ebuild:
  Version bump [520].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  08 Nov 2010; James Rowe <jnrowe@gmail.com> gruffy-0.2.2.ebuild:
  Keyworded x86.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> gruffy-0.2.2.ebuild:
  Keyworded amd64.

  08 Oct 2010; James Rowe <jnrowe@gmail.com> gruffy-0.2.2.ebuild:
  Keyworded ~x86.

*gruffy-0.2.2 (08 Oct 2010)

  08 Oct 2010; James Rowe <jnrowe@gmail.com> +gruffy-0.2.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me. Needed for sphinxcontrib-gruffygen.
