@@ -5,7 +5,7 @@ DIST gruffy-0.3.tar.gz 15519 RMD160 f92ce200ad01adc69c82dfa39ef0f11e7fce0d97 SHA
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9SN7MACgkQzJrj3cAXR0mzqwCdGGUoM9uJZgeaASqjjvXBVU7p
-tXYAmgPGkmDsOah13qRZT3SnlYcLyzY3
-=rDjv
+iEYEAREKAAYFAk9SRGsACgkQzJrj3cAXR0klpwCfUqWzdd0J7blc3GrUwaYAmQ0d
+L08AoLBNukwPKuzlUUGBpAtx/XAGnNVN
+=Fv6k
 -----END PGP SIGNATURE-----
