@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 DESCRIPTION=Gruffy is Python implementation of Gruff(Ruby Graphing Library)
 EAPI=2
 HOMEPAGE=http://pypi.python.org/pypi/gruffy/
 IUSE=examples
 KEYWORDS=amd64 x86
 LICENSE=MIT
-RDEPEND=dev-python/pgmagick >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+RDEPEND=dev-python/pgmagick >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 SLOT=0
 SRC_URI=mirror://pypi/g/gruffy/gruffy-0.3.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=da9a002abd1e9dff8b705bf03d443319
+_md5_=44bf30f0e5caa0f7809bce27d3b6370d
