@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> gruffy-0.3.ebuild:
+  Removed Python 2.4 support.
+
   03 Mar 2012; James Rowe <jnrowe@gmail.com> -gruffy-0.2.2.ebuild,
   gruffy-0.3.ebuild:
   Keyworded x86.
